--- a/trunk/RetailTrade/RetailTrade.csproj
+++ b/trunk/RetailTrade/RetailTrade.csproj
@@ -205,6 +205,7 @@
       <DependentUpon>OrdersAll.cs</DependentUpon>
     </Compile>
     <Compile Include="Printers\Datecs.cs" />
+    <Compile Include="Printers\Maria301Printer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ProjectSettings.cs">
       <SubType>UserControl</SubType>
