--- a/trunk/RetailTrade/app.config
+++ b/trunk/RetailTrade/app.config
@@ -15,6 +15,9 @@
         <add name="RetailTrade.Properties.Settings.ConnectionString"
             connectionString="Provider=VFPOLEDB.1;Data Source=D:\WORK\FarmTrade\Вента(Дн)_F98DF9B1_090232.dbf"
             providerName="System.Data.OleDb" />
+        <add name="RetailTrade.Properties.Settings.RetailTradeConnectionString1"
+            connectionString="Data Source=SERVER;Initial Catalog=RetailTrade;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <userSettings>
         <RetailTrade.Properties.Settings>
