--- a/trunk/RetailTrade/app.config
+++ b/trunk/RetailTrade/app.config
@@ -7,7 +7,7 @@
     </configSections>
     <connectionStrings>
         <add name="RetailTrade.Properties.Settings.RetailTradeConnectionString"
-            connectionString="Data Source={0};Initial Catalog=RetailTrade;Integrated Security=True"
+            connectionString="Data Source=SERVER;Initial Catalog=RetailTrade;Integrated Security=True"
             providerName="System.Data.SqlClient" />
         <add name="RetailTrade.Properties.Settings.db2ConnectionString"
             connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\db2.mdb"
