--- a/trunk/Client/RetailTrade/app.config
+++ b/trunk/Client/RetailTrade/app.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="RetailTradeClient.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="RetailTrade.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -15,8 +16,43 @@
         <add name="RetailTrade.Properties.Settings.ConnectionString"
             connectionString="Provider=VFPOLEDB.1;Data Source=D:\WORK\FarmTrade\Вента(Дн)_F98DF9B1_090232.dbf"
             providerName="System.Data.OleDb" />
+        <add name="RetailTradeClient.Properties.Settings.RetailTradeConnectionString"
+            connectionString="Data Source=LOCALHOST\SQLEXPRESS;Initial Catalog=RetailTradeCl;Integrated Security=True;Connect Timeout=300"
+            providerName="System.Data.SqlClient" />
+        <add name="RetailTradeClient.Properties.Settings.db2ConnectionString"
+            connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\db2.mdb"
+            providerName="System.Data.OleDb" />
+        <add name="RetailTradeClient.Properties.Settings.ConnectionString"
+            connectionString="Provider=VFPOLEDB.1;Data Source=D:\WORK\FarmTrade\Вента(Дн)_F98DF9B1_090232.dbf"
+            providerName="System.Data.OleDb" />
     </connectionStrings>
     <userSettings>
+        <RetailTradeClient.Properties.Settings>
+            <setting name="MainSplitDist" serializeAs="String">
+                <value>195</value>
+            </setting>
+            <setting name="MyLoc" serializeAs="String">
+                <value>0, 0</value>
+            </setting>
+            <setting name="MySize" serializeAs="String">
+                <value>592, 560</value>
+            </setting>
+            <setting name="MyState" serializeAs="String">
+                <value>Normal</value>
+            </setting>
+            <setting name="impSplitDist" serializeAs="String">
+                <value>164</value>
+            </setting>
+            <setting name="SERVER" serializeAs="String">
+                <value>sansee1\sqlexpress</value>
+            </setting>
+            <setting name="InentSp" serializeAs="String">
+                <value>183</value>
+            </setting>
+            <setting name="CommandTimeout" serializeAs="String">
+                <value>4000</value>
+            </setting>
+        </RetailTradeClient.Properties.Settings>
         <RetailTrade.Properties.Settings>
             <setting name="MainSplitDist" serializeAs="String">
                 <value>195</value>
