--- a/trunk/Client/RetailTrade/Properties/Settings.settings
+++ b/trunk/Client/RetailTrade/Properties/Settings.settings
@@ -5,10 +5,10 @@
     <Setting Name="RetailTradeConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=LOCALHOST\SQLEXPRESS;Initial Catalog=RetailTradeCl;Integrated Security=True;Connect Timeout=300&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=LEVADIA1\SQLEXPRESS;Initial Catalog=RetailTradeCl;Persist Security Info=True;User ID=sa;Password=123456;Connect Timeout=300&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=LOCALHOST\SQLEXPRESS;Initial Catalog=RetailTradeCl;Integrated Security=True;Connect Timeout=300</Value>
+      <Value Profile="(Default)">Data Source=LEVADIA1\SQLEXPRESS;Initial Catalog=RetailTradeCl;Persist Security Info=True;User ID=sa;Password=123456;Connect Timeout=300</Value>
     </Setting>
     <Setting Name="db2ConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
