--- a/trunk/Client/RetailTrade/app.config
+++ b/trunk/Client/RetailTrade/app.config
@@ -17,7 +17,7 @@
             connectionString="Provider=VFPOLEDB.1;Data Source=D:\WORK\FarmTrade\Вента(Дн)_F98DF9B1_090232.dbf"
             providerName="System.Data.OleDb" />
         <add name="RetailTradeClient.Properties.Settings.RetailTradeConnectionString"
-            connectionString="Data Source=LOCALHOST\SQLEXPRESS;Initial Catalog=RetailTradeCl;Integrated Security=True;Connect Timeout=300"
+            connectionString="Data Source=LEVADIA1\SQLEXPRESS;Initial Catalog=RetailTradeCl;Persist Security Info=True;User ID=sa;Password=123456;Connect Timeout=300"
             providerName="System.Data.SqlClient" />
         <add name="RetailTradeClient.Properties.Settings.db2ConnectionString"
             connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\db2.mdb"
